mobile/mobile.scss
/* Mobile Width */

#main-outlet {
  width: 100% !important;
}

/* Mobile Category Color Line for Category */
/*
body .category-list-item.category tr:first-of-type {
  border-bottom: 1px solid var(--darkreader-border--primary-low);
  border-left: 7px solid #0081c2;
}
*/
/* Mobile Category Groups */

// see https://github.com/discourse/discourse/blob/main/app/assets/javascripts/discourse/app/templates/mobile/components/parent-category-row.hbs

.categories-list .category h3, .categories-list .category h4 {
  margin-bottom: 0;
  border-left: 6px solid var(--category-1-color);
}

body .category-list-item.category .posts {
  width: auto;
  margin-left: auto;
}
body .category-list-item > footer,
body .subcategory-list-item > footer {
  background-color: var(--primary-very-low);
}
.categories-list .category-list th {
  padding: 0;
}
.category-list-item > footer .category-stat,
.subcategory-list-item > footer .category-stat {
  float: right;
}
.category-list-item > footer .category-stat:first-child,
.subcategory-list-item > footer .category-stat:first-child {
  margin-right: 0;
}
body .category-list-item.category tr:first-of-type {
  padding: 10px 0;
  border-bottom: 1px solid var(--primary-low);
}
body tr.category-topic-link:last-of-type {
  border-bottom: 1px solid var(--primary-low);
}
body .categories-list .category-list th {
  padding: 0;
}
body .category-list-item {
  border-top: none;
  margin-bottom: 10px;
}
body .category-list-item {
  padding: 0;
  border: 1px solid var(--primary-low) !important;
}
body .category-list img.avatar {
  max-width: 36px;
  max-height: 36px;
  margin: 5px 10px 5px 5px;
}
.category-list-item > footer,
.subcategory-list-item > footer {
  border-top: none;
}

tr.category-topic-link {
  border-bottom: 1px solid var(--darkreader-border--primary-low);
  padding: 5px 2px;
}

span.relative-date {
  white-space: nowrap;
  margin: 5px 5px 5px 10px;
}

.category-list.with-topics .category-list-item .category-description {
  display: unset;
}

